# nrf52fun

./: ASCII mockup layout.txt  CMakeLists.txt  CMakePresets.json  README.md  prj.conf
.claude/: settings.local.json
boards/: nrf52840dk_nrf52840.overlay  nrf52840dk_nrf52840_LCD.overlay  nrf52dk_nrf52832.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_LCD.overlay  nrf5340dk_nrf5340_cpuapp_gps.overlay
src/: arabic_prayers.c  arabic_prayers.h  bme280_sensor.c  bme280_sensor.h  font.c  font.h  font_16x16.c  font_16x16.h  gps.c  gps.h  gps_neo6m.c  gps_neo6m.h  gps_neo7m.c  gps_neo7m.h  gps_poll_thread.txt  gps_polling.h  ili9341.c  ili9341_parallel.c  ili9341_parallel.h  ili9341_tft.c  ili9341_tft.h  main.c  pmodals_sensor.c  pmodals_sensor.h  prayerTime.c  prayerTime.h  prayer_hmi.c  prayer_hmi.h  sd_card.c  sd_card.h  sdcard.c  sdcard.h  speaker.c  speaker.h  touch_screen.c  touch_screen.h  world_cities.c  world_cities.h
